(executable
  (name main)
  (public_name why3find)
  (flags (:standard "-w" "-9"))
  (libraries str unix dune-site yojson why3))

(rule
  (target config.ml)
  (action
    (write-file %{target}
      "let version = \"%{version:why3find}\"")))

(ocamllex lexer)

(generate_sites_module
  (module global)
  (sites why3find))
